2006-06-02  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/2723
	* ld-alpha/tlsbin.rd: Update for removal of some section syms.
	* ld-alpha/tlsbinr.rd: Likewise.
	* ld-alpha/tlspic.rd: Likewise.
	* ld-cris/hiddef1.d: Likewise.
	* ld-cris/libdso-2.d: Likewise.
	* ld-elf/sec64k.exp: Likewise.
	* ld-i386/tlsbin.rd: Likewise.
	* ld-i386/tlsbindesc.rd: Likewise.
	* ld-i386/tlsdesc.rd: Likewise.
	* ld-i386/tlsgdesc.rd: Likewise.
	* ld-i386/tlsnopic.rd: Likewise.
	* ld-i386/tlspic.rd: Likewise.
	* ld-ia64/tlsbin.rd: Likewise.
	* ld-ia64/tlspic.rd: Likewise.
	* ld-mmix/bpo-1.d: Likewise.
	* ld-mmix/bpo-10.d: Likewise.
	* ld-mmix/bpo-11.d: Likewise.
	* ld-mmix/bpo-14.d: Likewise.
	* ld-mmix/bpo-16.d: Likewise.
	* ld-mmix/bpo-17.d: Likewise.
	* ld-mmix/bpo-18.d: Likewise.
	* ld-mmix/bpo-19.d: Likewise.
	* ld-mmix/bpo-2.d: Likewise.
	* ld-mmix/bpo-22.d: Likewise.
	* ld-mmix/bpo-3.d: Likewise.
	* ld-mmix/bpo-4.d: Likewise.
	* ld-mmix/bpo-5.d: Likewise.
	* ld-mmix/bpo-6.d: Likewise.
	* ld-mmix/bpo-9.d: Likewise.
	* ld-mmix/bspec1.d: Likewise.
	* ld-mmix/bspec2.d: Likewise.
	* ld-mmix/greg-1.d: Likewise.
	* ld-mmix/greg-19.d: Likewise.
	* ld-mmix/greg-2.d: Likewise.
	* ld-mmix/greg-3.d: Likewise.
	* ld-mmix/greg-4.d: Likewise.
	* ld-mmix/greg-5.d: Likewise.
	* ld-mmix/greg-5s.d: Likewise.
	* ld-mmix/greg-6.d: Likewise.
	* ld-mmix/greg-7.d: Likewise.
	* ld-mmix/loc1.d: Likewise.
	* ld-mmix/loc2.d: Likewise.
	* ld-mmix/loc3.d: Likewise.
	* ld-mmix/loc4.d: Likewise.
	* ld-mmix/loc6.d: Likewise.
	* ld-mmix/local1.d: Likewise.
	* ld-mmix/local3.d: Likewise.
	* ld-mmix/local5.d: Likewise.
	* ld-mmix/local7.d: Likewise.
	* ld-mmix/locdo-1.d: Likewise.
	* ld-mmix/loct-1.d: Likewise.
	* ld-mmix/locto-1.d: Likewise.
	* ld-mmix/start-1.d: Likewise.
	* ld-mmix/undef-3.d: Likewise.
	* ld-powerpc/tlsexe32.r: Likewise.
	* ld-powerpc/tlsso32.r: Likewise.
	* ld-s390/tlsbin.rd: Likewise.
	* ld-s390/tlspic.rd: Likewise.
	* ld-sparc/tlssunbin32.rd: Likewise.
	* ld-sparc/tlssunbin64.rd: Likewise.